--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # Site
 title: 见字如面
 subtitle:
-description: 今天，一切都好~
+description: 见字如面，愿你我一切安好~
 author: 慢慢
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
@@ -121,7 +121,7 @@ menu:
   archives: /archives/
   categories: /categories/
   tags: /tags/
-  about: /about/
+  # about: /about/
   #sitemap: /sitemap.xml
   #commonweal: /404.html
 
@@ -387,12 +387,16 @@ han: false
 
 # Disqus
 disqus:
-  enable: false
-  shortname:
+  # enable: false
+  enable: true
+  # shortname: 
+  shortname: giselle
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
   hide: false
+  # count本来是没有的，我加的
+  count: true
 
 # Hypercomments
 #hypercomments_id:
@@ -558,12 +562,12 @@ algolia_search:
 
 # Local search
 local_search:
-  enable: false
+  enable: true
   # if auto, trigger search by changing input
   # if manual, trigger search by pressing enter key or search button
   trigger: auto
   # show top n results per article, show all results by setting to -1
-  top_n_per_article: 1
+  top_n_per_article: 2
 
 # External URL with BASE64 encrypt & decrypt
 # Usage: {% exturl text url "title" %}
