--- a/_config.yml
+++ b/_config.yml
@@ -413,7 +413,7 @@ changyan:
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
 #livere_uid: your uid
-livere_uid: drinkjch@163.com
+livere_uid: "MTAyMC8zNDM0OS8xMDg4Ng=="
 
 # Baidu Share
 # Available value:
