--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ menu:
   archives: /archives/
   categories: /categories/
   tags: /tags/
-  # about: /about/
+  about: /about/
   #sitemap: /sitemap.xml
   #commonweal: /404.html
 
@@ -137,7 +137,7 @@ menu_icons:
   home: home
   about: user
   # categories: th
-  categories: book
+  categories: th-large
   schedule: calendar
   tags: tags
   archives: hourglass-half
@@ -215,12 +215,12 @@ font:
 # Social Links
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
-# social:
+social:
   # LinkLabel: Link
-  # GitHub: https://github.com/giselle527
-  # 知乎: https://www.zhihu.com/people/shou-zi-giselle
-  # 豆瓣: https://www.douban.com/people/44614997
-  # 微博: https://weibo.com/giselle527
+  GitHub: https://github.com/giselle527
+  知乎: https://www.zhihu.com/people/shou-zi-giselle
+  豆瓣: https://www.douban.com/people/44614997
+  微博: https://weibo.com/giselle527
 
 
 # Social Links Icons
@@ -229,13 +229,13 @@ font:
 #   Key is the name of the item and value is the name of FontAwesome icon. Key is case-senstive.
 #   When an globe mask icon presenting up means that the item has no mapping icon.
 social_icons:
-  enable: false
+  enable: true
   # Icon Mappings.
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
-  GitHub: github
-  # 微博: weibo
-  # 豆瓣: douban
-  # 知乎: zhihu
+  GitHub: github-alt
+  微博: weibo
+  豆瓣: bold
+  知乎: h-square
 
 
 # Sidebar Avatar
@@ -288,11 +288,12 @@ sidebar:
 
 
 # Blog rolls
-#links_title: Links
+# links_title: Links
 #links_layout: block
 #links_layout: inline
-#links:
+# links:
   #Title: http://example.com/
+  # 知乎: https://www.zhihu.com
 
 
 # ---------------------------------------------------------------
@@ -713,3 +714,8 @@ version: 5.1.1
 
 # repository
 repository: giselle527/giselle527.github.io
+
+# 开启打赏功能
+reward_comment: 
+wechatpay: /uploads/wechatpay.jpg
+alipay: /uploads/alipay.jpg
