delete comment function: closed livere

--- a/_config.yml
+++ b/_config.yml
@@ -414,7 +414,7 @@ changyan:
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
 #livere_uid: your uid
-livere_uid: "MTAyMC8zNDM0OS8xMDg4Ng=="
+# livere_uid: "MTAyMC8zNDM0OS8xMDg4Ng=="
 
 # Baidu Share
 # Available value:
